@@ -124,8 +124,21 @@ X(0)
 EOF
 diff out2 expected
 
+# Or 4 if X[!] is allowed.
+# propositions and at most 2 nodes.
+run 0 randltl -n4 --ltl-prio=strongX=1 --tree-size=..2 0 > out
+sort <out >out2b
+cat >expected <<EOF
+0
+1
+X(0)
+X[!]1
+EOF
+diff out2b expected
+
 # requesting more formulas should fail
 run 2 randltl -n4 --tree-size=..2 0
+run 2 randltl -n5 --ltl-prio=strongX=1 --tree-size=..2 0
 
 # If more numbers are given, there are interpreted as atomic propositions
 run 0 randltl -n1000 0 1 > out
