@@ -330,6 +330,7 @@
       "F\t1\n",
       "G\t1\n",
       "X\t1\n",
+      "strongX\t0\n",
       "Closure\t1\n",
       "equiv\t1\n",
       "implies\t1\n",
@@ -345,25 +346,6 @@
       "\n",
       "Use argument sere_priorities=STRING to set the following SERE priorities:\n",
       "\n",
-      "ap\t3\n",
-      "false\t1\n",
-      "true\t1\n",
-      "not\t1\n",
-      "F\t1\n",
-      "G\t1\n",
-      "X\t1\n",
-      "Closure\t1\n",
-      "equiv\t1\n",
-      "implies\t1\n",
-      "xor\t1\n",
-      "R\t1\n",
-      "U\t1\n",
-      "W\t1\n",
-      "M\t1\n",
-      "and\t1\n",
-      "or\t1\n",
-      "EConcat\t1\n",
-      "UConcat\t1\n",
       "eword\t1\n",
       "boolform\t1\n",
       "star\t1\n",
@@ -379,37 +361,6 @@
       "\n",
       "Use argument boolean_priorities=STRING to set the following Boolean formula priorities:\n",
       "\n",
-      "ap\t3\n",
-      "false\t1\n",
-      "true\t1\n",
-      "not\t1\n",
-      "F\t1\n",
-      "G\t1\n",
-      "X\t1\n",
-      "Closure\t1\n",
-      "equiv\t1\n",
-      "implies\t1\n",
-      "xor\t1\n",
-      "R\t1\n",
-      "U\t1\n",
-      "W\t1\n",
-      "M\t1\n",
-      "and\t1\n",
-      "or\t1\n",
-      "EConcat\t1\n",
-      "UConcat\t1\n",
-      "eword\t1\n",
-      "boolform\t1\n",
-      "star\t1\n",
-      "star_b\t1\n",
-      "fstar\t1\n",
-      "fstar_b\t1\n",
-      "first_match\t1\n",
-      "and\t1\n",
-      "andNLM\t1\n",
-      "or\t1\n",
-      "concat\t1\n",
-      "fusion\t1\n",
       "ap\t3\n",
       "false\t1\n",
       "true\t1\n",
@@ -599,7 +550,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -613,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
